pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsInferHintsGivenHints/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Dumbledore
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
          ports:
            - protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: UDP dst-ports: 300-320'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: Exists
          ports:
            - endPort: 320
              port: 300
              protocol: UDP
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Dumbledore
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: TCP'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-7
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-8
    namespace: default
spec:
    egress:
        - to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: TCP'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-9
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
          ports:
            - protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: UDP dst-ports: 300-320'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-10
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
          ports:
            - endPort: 320
              port: 300
              protocol: UDP
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-11
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: TCP'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-12
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-13
    namespace: default
spec:
    egress:
        - to:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: TCP'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-14
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
          ports:
            - protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: UDP dst-ports: 300-320'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-15
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
          ports:
            - endPort: 320
              port: 300
              protocol: UDP
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-16
    namespace: default
spec:
    ingress:
        - from:
            - namespaceSelector:
                matchExpressions:
                    - key: kubernetes.io/metadata.name
                      operator: In
                      values:
                        - default
              podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: default deny policy for namespace default
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny-for-default
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: NetworkPolicy to allow access to DNS for namespace default
        nsx-id: none
    creationTimestamp: null
    name: dns-policy-default
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
